# semanticeight-ros

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.md.license  SETUP.md  SETUP.md.license  TODO.md  USAGE.md  package.xml  rosdoc.yaml
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt
config/: classic.yaml  config.yaml  config_ICRA2020_experiment.yaml  config_gazebo_example.yaml  config_habitat.yaml  config_tum.yaml  experiment.rviz  experiment.yaml  experiment_handheld.yaml  experiment_handheld_mav.yaml  experiment_handheld_pc.rviz  experiment_handheld_pc.yaml  gazebo.yaml  gazebo_apartment.yaml  gazebo_maze.yaml  gazebo_powerplant.yaml  habitat.yaml  matterport3d_1LXtFkjw3qL.yaml  matterport3d_1pXnuDYAj8r.yaml  matterport3d_1pXnuDYAj8r_classic.yaml  matterport3d_2azQ1b91cZZ.yaml  matterport3d_2azQ1b91cZZ_classic.yaml  matterport3d_2n8kARJN3HM.yaml  matterport3d_2n8kARJN3HM_classic.yaml  matterport3d_2t7WUuJeko7.yaml  matterport3d_2t7WUuJeko7_classic.yaml  replica_apartment_0.yaml  replica_apartment_0_classic.yaml  replica_apartment_1.yaml  replica_apartment_2.yaml  replica_room_0.yaml  rosconsole.conf  semanticeight.rviz  semanticeight_experiment.yaml  semanticeight_gazebo.yaml  semanticeight_gazebo_apartment.yaml  semanticeight_gazebo_maze.yaml  semanticeight_gazebo_powerplant.yaml  semanticeight_habitat.yaml  simulation.rviz  (+3 more)
config/gazebo/: apartment.yaml  maze.yaml  powerplant.yaml
config/matterport3d/: 17DRP5sb8fy.yaml  1LXtFkjw3qL.yaml  1pXnuDYAj8r.yaml  1pXnuDYAj8r_classic.yaml  29hnd4uzFmX.yaml  2azQ1b91cZZ.yaml  2azQ1b91cZZ_classic.yaml  2n8kARJN3HM.yaml  2n8kARJN3HM_classic.yaml  2t7WUuJeko7.yaml  2t7WUuJeko7_classic.yaml  5LpN3gDmAk7.yaml  5ZKStnWn8Zo.yaml  5q7pvUzZiYa.yaml  759xd9YjKW5.yaml  7y3sRwLe3Va.yaml  8194nk5LbLH.yaml  82sE5b5pLXE.yaml  8WUmhLawc2A.yaml  ARNzJeq3xxb.yaml  B6ByNegPMKs.yaml  D7G3Y4RVNrH.yaml  D7N2EKCX4Sj.yaml  E9uDoFAP3SH.yaml  EDJbREhghzL.yaml  EU6Fwq7SyZv.yaml  GdvgFV5R1Z5.yaml  HxpKQynjfin.yaml  JF19kD82Mey.yaml  JeFG25nYj2p.yaml  JmbYfDe2QKZ.yaml  PX4nDJXEHrG.yaml  Pm6F8kyY3z2.yaml  PuKPg4mmafe.yaml  QUCTc6BB5sX.yaml  RPmz2sHmrrY.yaml  S9hNv5qa7GM.yaml  SN83YJsR3w2.yaml  TbHJrupSAjP.yaml  ULsKaCPVFJR.yaml  (+54 more)
config/replica/: apartment_1.yaml
config/semanticeight/: habitat.yaml  habitat_sim.yaml  semanticeight.rviz  semanticeight.yaml  semanticeight_experiment.yaml  semanticeight_experiment_rosbag.yaml  semanticeight_gazebo.rviz  semanticeight_gazebo.yaml  semanticeight_gazebo_apartment.yaml  semanticeight_gazebo_maze.yaml  semanticeight_gazebo_powerplant.yaml  semanticeight_srl.yaml
data/: config.yaml
doc/: supereight_ros_threads.dot
include/supereight_ros/: CircularBuffer.hpp  control_interface.hpp  dataset.hpp  draw.h  eigen_ros_conversions.hpp  eigen_ros_conversions_impl.hpp  filesystem.hpp  functions.hpp  stats.hpp  supereight_ros.hpp  supereight_ros_config.hpp  supereight_ros_impl.hpp  supereight_utils.hpp  utilities.hpp  utilities_impl.hpp
launch/: experiment.launch  experiment_handheld.launch  experiment_handheld_mav.launch  experiment_handheld_pc.launch  experiment_rosbag.launch  experiment_rviz_remote.launch  experiment_throttle.launch  gazebo.launch  gazebo_apartment.launch  gazebo_example.launch  gazebo_maze.launch  gazebo_powerplant.launch  habitat.launch  habitat_rosbag.launch  habitat_teleop.launch  ping.launch  realsense_D455.launch  realsense_D455_calibration.launch  rs_D455.launch  rviz.launch  semanticeight_experiment.launch  semanticeight_experiment_rosbag.launch  semanticeight_gazebo.launch  semanticeight_gazebo_apartment.launch  semanticeight_gazebo_maze.launch  semanticeight_gazebo_powerplant.launch  semanticeight_habitat.launch  semanticeight_habitat_bare.launch  semanticeight_habitat_rosbag.launch  semanticeight_habitat_teleop.launch  semanticeight_srl.launch  supereight_ros.launch  supereight_ros_ICRA2020_experiment.launch  supereight_ros_experiment.launch  supereight_ros_gazebo_example.launch  supereight_ros_gdb.launch  supereight_ros_habitat.launch  supereight_ros_tum.launch  supereight_ros_valgrind.launch  teleop.launch  (+2 more)
misc/: install_supereight_dependencies.sh  rviz_supereight_ros.jpeg.license
scripts/: add-time-to-stats  aggregate-logs  aggregate-tsv  compress-meshes  decompress-meshes  evaluate-background  evaluate-meshes  evaluate-objects  generate-aabb-ply  generate-bg-stats  generate-object-stats  generate-overview  generate-plots  install_supereight_dependencies.sh  koala-dataset-mount  lib.sh  mp3d-batch-evaluation.sh  mp3d-stats-to-se-config.py  normalize-volume-stats  paper-plots  plots  postprocess-objects  postprocess-run  pull-logs  render-montage  repeat-roslaunch  semanticeight-generate-candidate-ply  semanticeight-object-plot  semanticeight-plot  semanticeight-plot.old  semanticeight-utility-plot  stop-semanticeight  supplement-object-stats  tranform-meshes-to-gt-frame
scripts/experiment/: experiment-env  experiment-pull-logs  experiment-rosrun  experiment-rviz  mav-checklist  mav-pull-code  xavier-checklist  xavier-launch-experiment  xavier-pull-code
src/: control_interface.cpp  dataset.cpp  stats.cpp  supereight_ros.cpp  supereight_ros_config.cpp  supereight_ros_node.cpp  supereight_ros_visualization.cpp  utilities.cpp
test/: main.cpp  test_example.cpp  test_supereight_ros.cpp  utilities_unittest.cpp
test/test_semanticeight/: test_frontiers.launch  test_frontiers.py  test_semanticeight.rviz  test_semanticeight.yaml
worlds/: apartment.world  maze.world  powerplant.world
