<?xml version="1.0"?>
<package format="2">
  <name>supereight_ros</name>
  <version>0.0.0</version>
  <description>ROS wrapper for supereight</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="s.papatheodorou18@imperial.ac.uk">Sotiris Papatheodorou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
